[package]
name = "jack"
version = "0.1.0"
authors = ["IGI-111 <igi-111@protonmail.com>"]
edition = "2018"

[lib]
name = "jack_lang"
path = "src/lib.rs"

[[bin]]
name = "jack"
path = "src/bin.rs"

[dependencies]
nom = "5.0.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0" }
err-derive = "0.2.1"
