[package]
name = "jack"
version = "0.1.0"
authors = ["IGI-111 <igi-111@protonmail.com>"]
edition = "2018"

[lib]
name = "jack_lang"
path = "src/lib.rs"

[[bin]]
name = "jack"
path = "src/bin.rs"

[dependencies]
nom = "6.1.2"
cranelift = "0.71.0"
cranelift-module = "0.71.0"
cranelift-jit = "0.71.0"
err-derive = "0.3.0"
